USARTStream implementation using usart_serial library.

--- a/console/src/CMakeLists.txt
+++ b/console/src/CMakeLists.txt
@@ -10,6 +10,7 @@ add_executable(${ELFFILE}
     ../../Framebuffer/SSD1306.cpp
     ../../Stream/formatting.cpp
     ../../Stream/BaseOutStream.cpp
+    ../../Stream/USARTStream.cpp
     ../../system/system_init.c
     ../../system/tick.c
     ../../system/console.cpp
